#2567 A bit of tidy up.